feat(register): created endpoint
